# CLI-cotacao-de-moedas

./: README.md  pyproject.toml  testes_http.py
