[project]
name = "testando-requisicoes-http"
version = "0.1.0"
description = ""
authors = [
    {name = "Enzo Barbi",email = "enzofagundes123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.4.0,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "respx (>=0.22.0,<0.23.0)"
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'python3 testes_http.py'
test = 'pytest testes_http.py'
